--- a/.github/workflows/terraform-vprofile.yml
+++ b/.github/workflows/terraform-vprofile.yml
@@ -19,8 +19,8 @@ env:
     AWS_SECRET_ACCESS_KEY: ${{ secrets. AWS_SECRET_ACCESS_KEY }}
     # S3 bucket for the Terraform state
     BUCKET_TF_STATE: ${{ secrets. BUCKET_TF_STATE}}
-    AWS REGION: us-east-2
-    EKS CLUSTER: vprofile-eks
+    AWS_REGION: us-east-1
+    EKS_CLUSTER: vprofile-eks
 
 
     
