--- a/.github/workflows/terraform-vprofile.yml
+++ b/.github/workflows/terraform-vprofile.yml
@@ -11,7 +11,7 @@ on:
     branches :
         - main
     paths :
-    - terraform/
+    - terraform/**
 
 env:
     # Credentials for deployment to AWS
